--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@ title: {{ site.name }}
 ---
 
 <div id="home">
-  <h1>All Content</h1>
-  <ul class="posts">
-    {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
+  <h1>Recent Video:</h1>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+
+  <iframe id="youtube_video" width="600" height="340" frameborder="0" allowfullscreen></iframe>
+
+  <script>
+    var channelID = "UCvyCnCtOuS6CcsVnqgsYvRg";
+    $.getJSON('https://api.rss2json.com/v1/api.json?rss_url=https%3A%2F%2Fwww.youtube.com%2Ffeeds%2Fvideos.xml%3Fchannel_id%3D'+channelID, function(data) {
+       var link = data.items[0].link;
+       var id = link.substr(link.indexOf("=")+1);
+        $("#youtube_video").attr("src","https://youtube.com/embed/"+id + "?controls=0&showinfo=0&rel=0");
+    });
+  </script>
+
 </div>
