--- a/index.html
+++ b/index.html
@@ -3,23 +3,26 @@ layout: default
 title: {{ site.name }}
 ---
 
-<div id="home">
 
-  <div class="container">
-    <div class="well-lg">
-      <h1>Recent Video:</h1>
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
-      <iframe id="youtube_video" width="600" height="340" frameborder="0" allowfullscreen></iframe>
-
-      <script>
-        var channelID = "UCvyCnCtOuS6CcsVnqgsYvRg";
-        $.getJSON('https://api.rss2json.com/v1/api.json?rss_url=https%3A%2F%2Fwww.youtube.com%2Ffeeds%2Fvideos.xml%3Fchannel_id%3D'+channelID, function(data) {
-           var link = data.items[0].link;
-           var id = link.substr(link.indexOf("=")+1);
-            $("#youtube_video").attr("src","https://youtube.com/embed/"+id + "?controls=0&showinfo=0&rel=0");
-        });
-      </script>
+<div class="container-fluid" id="home">
+    
+    <div class="jumbotron">
+        <h1 class="display-3 font-weight-bold">Hunter College HS Athletic Association</h1>
+        <p class="lead">Your one-stop-shop for Hunter Athletics news.</p>
     </div>
-  </div>
+    
+    <h1>Recent Video:</h1>
+          <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+
+          <iframe id="youtube_video" width="600" height="340" frameborder="0" allowfullscreen></iframe>
+
+          <script>
+            var channelID = "UCvyCnCtOuS6CcsVnqgsYvRg";
+            $.getJSON('https://api.rss2json.com/v1/api.json?rss_url=https%3A%2F%2Fwww.youtube.com%2Ffeeds%2Fvideos.xml%3Fchannel_id%3D'+channelID, function(data) {
+               var link = data.items[0].link;
+               var id = link.substr(link.indexOf("=")+1);
+                $("#youtube_video").attr("src","https://youtube.com/embed/"+id + "?controls=0&showinfo=0&rel=0");
+            });
+          </script>
 </div>
