added more aows

--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@ title: {{ site.name }}
 
 
 <div class="container-fluid" id="home">
-    
+
     <div class="jumbotron">
-        <h1 class="display-3 font-weight-bold">Hunter College HS Athletic Association</h1>
+        <h1 class="display-3 font-weight-bold">Hunter Athletic Association</h1>
         <p class="lead">Your one-stop-shop for Hunter Athletics news.</p>
     </div>
-    
+
     <h1>Recent Video:</h1>
           <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
-          <iframe id="youtube_video" width="600" height="340" frameborder="0" allowfullscreen></iframe>
+          <iframe id="youtube_video" width="2em" height="1em" frameborder="0" allowfullscreen></iframe>
 
           <script>
             var channelID = "UCvyCnCtOuS6CcsVnqgsYvRg";
