--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ title: {{ site.name }}
     <h1>Recent Video:</h1>
           <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
-          <iframe id="youtube_video" width="2em" height="1em" frameborder="0" allowfullscreen></iframe>
+          <iframe id="youtube_video" width="600" height="340" frameborder="0" allowfullscreen></iframe>
 
           <script>
             var channelID = "UCvyCnCtOuS6CcsVnqgsYvRg";
