some small things

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: {{ site.name }}
 
     <div class="jumbotron">
         <h1 class="display-3 font-weight-bold">Hunter Athletic Association</h1>
-        <p class="lead">Your one-stop-shop for Hunter Athletics news.</p>
+        <p class="lead">Your one-stop shop for Hunter Athletics news.</p>
     </div>
 
     <h1>Recent Video:</h1>
