--- a/index.html
+++ b/index.html
@@ -5,36 +5,27 @@ title: {{ site.name }}
 
 
 <div class="row mb-3 text-center">
-  <div class="col-sm-4">
+  <div class="col-sm-6">
     <div class="card">
       <div class="card-body">
         <h4 class="card-header"><span class="font-weight-bold text-center">Welcome to the HCHS AA Website!</span></h4>
         <h4 class="card-title">Stay Updated!</h4>
         <p class="card-text">Be in the know about Hunter Athletics. Read up on what's new in the Hunter sports world by clicking below!</p>
         <div class="container-fluid">
-          <a href="{{site.url}}/category/aow" class="btn btn-outline-primary mb-3">Athletes of the Week</a>
+          <a href="{{site.url}}/category/aow" class="btn btn-outline-primary">Athletes of the Week</a>
           <a href="{{site.url}}/category/sp" class="btn btn-outline-primary">Senior Profiles</a>
         </div>
       </div>
     </div>
   </div>
-  <div class="col-sm-4">
+  <div class="col-sm-6">
     <div class="card">
       <div class="card-body">
-        <img class="card-img-top" src="{{ "/assets/img/youtube.png" | absolute_url }}" alt="YouTube">
-        <h4 class="card-title">YouTube</h4>
+        <h4 class="card-title">Stay Connected!</h4>
         <p class="card-text">Watch the Weekly Updates and more on the AA YouTube!</p>
-        <a href="https://www.youtube.com/channel/UCvyCnCtOuS6CcsVnqgsYvRg/videos" class="btn btn-danger">Go Now</a>
-      </div>
-    </div>
-  </div>
-  <div class="col-sm-4">
-    <div class="card">
-      <div class="card-body">
-        <img class="card-img-top" src="{{ "/assets/img/facebook.png" | absolute_url }}" alt="Card image cap">
-        <h4 class="card-title">Facebook</h4>
+        <a href="https://www.youtube.com/channel/UCvyCnCtOuS6CcsVnqgsYvRg/videos" class="btn btn-danger mb-4">YouTube</a>
         <p class="card-text">Follow the AA Facebook to not miss out on a single event or giveaway!</p>
-        <a href="https://www.facebook.com/athletic.associacion" class="btn btn-primary">Go Now</a>
+        <a href="https://www.facebook.com/athletic.associacion" class="btn btn-primary mb-2">Facebook</a>
       </div>
     </div>
   </div>
