Installed font-awesome CDN, added some icons to homepage

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@ title: {{ site.name }}
       <div class="card-body">
         <h4 class="card-title">Stay Connected!</h4>
         <p class="card-text">Watch the Weekly Updates and more on the AA YouTube!</p>
-        <a href="https://www.youtube.com/channel/UCvyCnCtOuS6CcsVnqgsYvRg/videos" class="btn btn-danger mb-4">YouTube</a>
+        <a href="https://www.youtube.com/channel/UCvyCnCtOuS6CcsVnqgsYvRg/videos" class="btn btn-danger mb-4"><i class="fa fa-youtube"></i> YouTube</a>
         <p class="card-text">Follow the AA Facebook to not miss out on a single event or giveaway!</p>
-        <a href="https://www.facebook.com/athletic.associacion" class="btn btn-primary mb-2">Facebook</a>
+        <a href="https://www.facebook.com/athletic.associacion" class="btn btn-primary mb-2"><i class="fa fa-facebook-official"></i> Facebook</a>
       </div>
     </div>
   </div>
