--- a/index.html
+++ b/index.html
@@ -3,54 +3,55 @@ layout: default
 title: {{ site.name }}
 ---
 
-
-<div class="row mb-3 text-center">
-  <div class="col-sm-6">
-    <div class="card">
-      <div class="card-body">
-        <h4 class="card-header"><span class="font-weight-bold text-center">Welcome to the HCHS AA Website!</span></h4>
-        <h4 class="card-title">Stay Updated!</h4>
-        <p class="card-text">Be in the know about Hunter Athletics. Read up on what's new in the Hunter sports world by clicking below!</p>
-        <div class="container-fluid">
-          <a href="{{site.url}}/category/aow" class="btn btn-outline-primary">Athletes of the Week</a>
-          <a href="{{site.url}}/category/sp" class="btn btn-outline-primary">Senior Profiles</a>
+<div id=homepage>
+  <div class="row mb-3 text-center">
+    <div class="col-sm-6">
+      <div class="card">
+        <div class="card-body">
+          <h4 class="card-header"><span class="font-weight-bold text-center">Welcome to the HCHS AA Website!</span></h4>
+          <h4 class="card-title">Stay Updated!</h4>
+          <p class="card-text">Be in the know about Hunter Athletics. Read up on what's new in the Hunter sports world by clicking below!</p>
+          <div class="container-fluid">
+            <a href="{{site.url}}/category/aow" class="btn btn-outline-primary">Athletes of the Week</a>
+            <a href="{{site.url}}/category/sp" class="btn btn-outline-primary">Senior Profiles</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6">
+      <div class="card">
+        <div class="card-body">
+          <h4 class="card-title">Stay Connected!</h4>
+          <p class="card-text">Watch the Weekly Updates and more on the AA YouTube!</p>
+          <a href="https://www.youtube.com/channel/UCvyCnCtOuS6CcsVnqgsYvRg/videos" class="btn btn-danger mb-4"><i class="fa fa-youtube"></i> YouTube</a>
+          <p class="card-text">Follow the AA Facebook to not miss out on a single event or giveaway!</p>
+          <a href="https://www.facebook.com/athletic.associacion" class="btn btn-primary mb-2"><i class="fa fa-facebook-official"></i> Facebook</a>
         </div>
       </div>
     </div>
   </div>
-  <div class="col-sm-6">
-    <div class="card">
-      <div class="card-body">
-        <h4 class="card-title">Stay Connected!</h4>
-        <p class="card-text">Watch the Weekly Updates and more on the AA YouTube!</p>
-        <a href="https://www.youtube.com/channel/UCvyCnCtOuS6CcsVnqgsYvRg/videos" class="btn btn-danger mb-4"><i class="fa fa-youtube"></i> YouTube</a>
-        <p class="card-text">Follow the AA Facebook to not miss out on a single event or giveaway!</p>
-        <a href="https://www.facebook.com/athletic.associacion" class="btn btn-primary mb-2"><i class="fa fa-facebook-official"></i> Facebook</a>
-      </div>
-    </div>
+
+
+
+  <div class="container-fluid" id="home">
+
+      <!-- <div class="jumbotron">
+          <h1 class="display-3 font-weight-bold">Hunter Athletic Association</h1>
+          <p class="lead">Your one-stop shop for Hunter Athletics news.</p>
+      </div> -->
+
+      <h1>Recent Video:</h1>
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+
+            <iframe id="youtube_video" width="600" height="340" frameborder="0" allowfullscreen></iframe>
+
+            <script>
+              var channelID = "UCvyCnCtOuS6CcsVnqgsYvRg";
+              $.getJSON('https://api.rss2json.com/v1/api.json?rss_url=https%3A%2F%2Fwww.youtube.com%2Ffeeds%2Fvideos.xml%3Fchannel_id%3D'+channelID, function(data) {
+                 var link = data.items[0].link;
+                 var id = link.substr(link.indexOf("=")+1);
+                  $("#youtube_video").attr("src","https://youtube.com/embed/"+id + "?controls=0&showinfo=0&rel=0");
+              });
+            </script>
   </div>
-</div>
-
-
-
-<div class="container-fluid" id="home">
-
-    <!-- <div class="jumbotron">
-        <h1 class="display-3 font-weight-bold">Hunter Athletic Association</h1>
-        <p class="lead">Your one-stop shop for Hunter Athletics news.</p>
-    </div> -->
-
-    <h1>Recent Video:</h1>
-          <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-
-          <iframe id="youtube_video" width="600" height="340" frameborder="0" allowfullscreen></iframe>
-
-          <script>
-            var channelID = "UCvyCnCtOuS6CcsVnqgsYvRg";
-            $.getJSON('https://api.rss2json.com/v1/api.json?rss_url=https%3A%2F%2Fwww.youtube.com%2Ffeeds%2Fvideos.xml%3Fchannel_id%3D'+channelID, function(data) {
-               var link = data.items[0].link;
-               var id = link.substr(link.indexOf("=")+1);
-                $("#youtube_video").attr("src","https://youtube.com/embed/"+id + "?controls=0&showinfo=0&rel=0");
-            });
-          </script>
 </div>
