--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@ title: {{ site.name }}
   <div class="card">
     <h2 class="card-header">Recent Video:</h1>
       <div class="card-body">
+        <div class="videoWrapper">
           <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
           <iframe id="youtube_video" width="600" height="340" frameborder="0" allowfullscreen></iframe>
@@ -59,5 +60,6 @@ title: {{ site.name }}
           </script>
         </div>
       </div>
+    </div>
   </div>
 </div>
