added recap layout/category

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ title: {{ site.name }}
 </div>
 
 <div class="row mb-3 text-center">
+
   <div class="col-sm-6">
     <div class="card">
       <div class="card-body">
@@ -20,12 +21,13 @@ title: {{ site.name }}
           <div class="btn-group-vertical">
             <a href="{{site.url}}/category/aow" class="btn btn-primary">Athletes of the Week</a>
             <a href="{{site.url}}/category/sp" class="btn btn-primary">Senior Profiles</a>
-            <a href="{{site.url}}/category/aow" class="btn btn-primary">Previews/Recaps</a>
+            <a href="{{site.url}}/category/recap" class="btn btn-primary">Team Profiles</a>
           </div>
         </div>
       </div>
     </div>
   </div>
+
   <div class="col-sm-6">
     <div class="card">
       <div class="card-body">
@@ -37,6 +39,7 @@ title: {{ site.name }}
       </div>
     </div>
   </div>
+
 </div>
 
 
