added logo to home-page

--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@ title: {{ site.name }}
 
 <div class="container-fluid">
   <div class="jumbotron">
-    <h1 class="display-1">HCHS AA</h1>
-    <h3 class="text-muted">Your home for Hunter Athletics News</h3>
+    <div class="row">
+      <div class="col-7">
+        <h1 class="display-1 mt-4">HCHS AA</h1>
+        <h4 class="text-muted">Your home for Hunter Athletics News</h4>
+      </div>
+      <div class="col">
+        <img src="{{ "/assets/img/HawkHead-B.png" | absolute_url }}" class="img-responsive" alt="Hawk Logo">
+      </div>
+    </div>
   </div>
 </div>
 
