made jumbotron thing scale better on mobile devices

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@ title: {{ site.name }}
 <div class="container-fluid">
   <div class="jumbotron">
     <div class="row">
-      <div class="col-7">
+      <div class="col-sm-7">
         <h1 class="display-1 mt-4">HCHS AA</h1>
         <h4 class="text-muted">Your home for Hunter Athletics News</h4>
       </div>
-      <div class="col">
+      <div class="col-sm">
         <img src="{{ "/assets/img/HawkHead-B.png" | absolute_url }}" class="img-responsive" alt="Hawk Logo">
       </div>
     </div>
