--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: {{ site.name }}
         <h4 class="text-muted">Your home for Hunter Athletics News</h4>
       </div>
       <div class="col-sm">
-        <img src="{{ "/assets/img/HawkHead-B.png" | absolute_url }}" class="img-responsive" alt="Hawk Logo">
+        <img src="{{ "/assets/img/HawkHead-B.png" | absolute_url }}" class="img-responsive grow" alt="Hawk Logo">
       </div>
     </div>
   </div>
