--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ title: {{ site.name }}
     <div class="card-body">
       <h4 class="card-header text-center"><span class="font-weight-bold">Active PSAL Sports</span></h4>
       <div class="container-fluid text-center">
-        <div class="btn-group btn-group-sm flex-wrap">
+        <div class="btn-group flex-wrap">
           <a href="http://www.psal.org/profiles/team-profile.aspx#001/02816" class="btn btn-warning">B Basketball</a>
           <a href="http://www.psal.org/profiles/team-profile.aspx#003/02816" class="btn btn-warning">G Basketball</a>
           <a href="http://www.psal.org/profiles/team-profile.aspx#013/02816" class="btn btn-warning">B Swim</a>
