changed color scheme of homepage buttons

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@ title: {{ site.name }}
         <p class="card-text">Read up on what's new in the Hunter sports world by clicking below!</p>
         <div class="container-fluid mb-4">
           <div class="btn-group-vertical">
-            <a href="{{site.url}}/category/aow" class="btn btn-primary">Athletes of the Week</a>
-            <a href="{{site.url}}/category/sp" class="btn btn-primary">Senior Profiles</a>
-            <a href="{{site.url}}/category/recap" class="btn btn-primary">Team Profiles</a>
+            <a href="{{site.url}}/category/aow" class="btn btn-warning">Athletes of the Week</a>
+            <a href="{{site.url}}/category/sp" class="btn btn-warning">Senior Profiles</a>
+            <a href="{{site.url}}/category/recap" class="btn btn-warning">Team Profiles</a>
           </div>
         </div>
       </div>
